# qlik-FastApi

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DOCKER.md  Dockerfile  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  check_uwdjj_type.py  docker-compose.yml  find_app_status_object.py  get_bookmarks.py  pyproject.toml  requirements.txt  run.py  start_server.sh  test_api_flow.py  test_bookmark_pivot.py  test_uwdjj_bookmark.py
certs/: .gitkeep
src/api/: main.py
src/api/api/: deps.py
src/api/api/v1/: router.py
src/api/api/v1/endpoints/: apps.py  data.py  health.py
src/api/clients/: __init__.py  base.py  qlik_engine.py  qlik_repository.py
src/api/core/: __init__.py  config.py  dependencies.py  events.py  exceptions.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/repositories/: __init__.py  app_repository.py  base.py  data_repository.py
src/api/schemas/: app.py  common.py  data.py
src/api/services/: __init__.py  app_service.py  base.py  data_service.py
src/api/utils/: __init__.py  pagination.py  qlik_helpers.py  validators.py
tests/: __init__.py  conftest.py  test_basic.py
tests/integration/: __init__.py  test_endpoints.py
tests/unit/: __init__.py  test_services.py
